adding edit functions

--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@
 
     <link
       rel="stylesheet"
-      href="C:\Users\kyras\OneDrive\Desktop\FED-2207\Projects\TWT Clone\Stylesheets\DSignup.css"
+      href="signup.css"
     />
 
     <!--bootstrap-->
@@ -22,6 +22,7 @@
   </head>
 
   <body id="grid" class="grid">
+    <!-- //logo area -->
     <div>
       <section id="div1">
         <div id="logopic">
@@ -40,7 +41,7 @@
       </section>
     </div>
 
-
+    <!-- //sign up form -->
     <div>
       <section class="form1-table">
         <div class="form-input">
@@ -174,21 +175,20 @@
 
           <!--submit form button-->
           <button type="button" class="btn btn-info btn-lg">
-            <a href="C:\Users\kyras\OneDrive\Desktop\FED-2207\Projects\TWT Clone\destop pages\DLogin.html">
+            <a href="login.html">
             Submit
           </a>
           </button>
 
           <!--back to welcome page-->
-        <a href="C:\Users\kyras\OneDrive\Desktop\FED-2207\Projects\TWT Clone\destop pages\DWelcome.html">
+        <a href="welcome.html">
           <button type="button" class="btn btn-outline-info">Cancel</button>
         </a>
       </section>
     </div>
 
-    <!--jQuery-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!--javascript-->
 
-    <script src="C:\Users\kyras\OneDrive\Desktop\FED-2207\Projects\TWT Clone\JS pages\twt.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
