--- a/dashboard.html
+++ b/dashboard.html
@@ -124,11 +124,11 @@
       <!-- new message post -->
       <input type="text" id="newMessage" placeholder="Create new post" maxlength="50">
       <input id="msgBtn" for="newMessage" type="submit" name="submit">
-      <input id="msgBtn" for="newMessage" type="file" name="JPG" contentType="image/jpeg">
+      <input id="filegBtn" for="newMessage" type="file" name="JPG" contentType="image/jpeg">
       
       <!-- new post -->
       <div id="postcardSection">
-        <div id="postcard" class="postcard">
+        <!-- <div id="postcard" class="postcard">
           <div class="card" style="width: 18rem">
             <div class="card-body">
               <img
@@ -162,9 +162,10 @@
               </button>
             </div>  
           </div>
-        </div>
+        </div> -->
       </div>
 
+      
       <!-- Images div -->
         <div id="imagesDiv"></div>
   
