--- a/signup.html
+++ b/signup.html
@@ -115,7 +115,7 @@
 
       <section id="info">
         <div class="form-input">
-          <input
+          <input id="password-ReEnter"
             class="form-control form-control-lg"
             type="text"
             placeholder="Re-enter password"
@@ -174,7 +174,7 @@
         <p id="warninglabel">Terms and conditions apply, agree to terms.</p>
 
           <!--submit form button-->
-          <button type="button" class="btn btn-info btn-lg">
+          <button id="submitUserBtn" type="button" class="btn btn-info btn-lg">
             <a href="login.html">
             Submit
           </a>
@@ -189,6 +189,6 @@
 
     <!--javascript-->
 
-    <script src="main.js"></script>
+    <script src="login.js"></script>
   </body>
 </html>
