--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
       <form id="form1">
         <div class="form-input">
           <input
-            id="userName"
+            id="user-Name"
             class="form-control form-control-lg"
             type="text"
             placeholder="Username"
@@ -52,7 +52,7 @@
 
         <div class="form-input">
           <input
-            id="userPassword"
+            id="user-Password"
             class="form-control form-control-lg"
             type="text"
             placeholder="Password"
